--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Biblioteca_Cliente
-main.class=Vista.LogIn_Biblioteca
+main.class=Principal.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
